@@ -41,7 +41,7 @@ require 'strings'
 require 'tables'
 require 'lists'
 require 'sets'
-require 'texts'
+texts = require 'texts'
 require 'pack'
 res = require 'resources'
 extdata = require 'extdata'
