@@ -1,5 +1,7 @@
 -------------------------------------------------
-GearSwap 0.874 - Adjusted midaction and pet_midaction.
+GearSwap 0.875 - Changed command_registry handling slightly
+-------------------------------------------------
+GearSwap 0.874 - Added indi_change event
 -------------------------------------------------
 GearSwap 0.873 - Adjusted midaction and pet_midaction.
 -------------------------------------------------
